fix: Enable particles on mobile, fix tap ripple offset
- Remove display:none for particles on mobile
- Fix ripple position by using left/top instead of x/y transform

--- a/src/App.css
+++ b/src/App.css
@@ -375,10 +375,7 @@ a, button, img, .menu-item, .project-link, .contact-link, .back-button, .photo-i
     font-size: 3rem;
   }
 
-  .particle {
-    display: none;
-  }
-
+  
   .cursor-orb {
     display: none;
   }
